<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".presentation.ui.DetailCharacterFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_image_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_rick_and_morty_character"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image_view" />

    <TextView
        android:id="@+id/detail_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/detail_name"
        app:layout_constraintTop_toBottomOf="@+id/detail_image_view" />

    <TextView
        android:id="@+id/detail_species"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/species"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <TextView
        android:id="@+id/detail_species_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/species"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/detail_species"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

    <TextView
        android:id="@+id/detail_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/gender"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_species" />

    <TextView
        android:id="@+id/detail_gender_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/gender"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/detail_gender"
        app:layout_constraintTop_toBottomOf="@+id/detail_species" />

    <TextView
        android:id="@+id/detail_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_gender" />

    <TextView
        android:id="@+id/detail_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/status"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/detail_status"
        app:layout_constraintTop_toBottomOf="@+id/detail_gender" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_status" />

    <TextView
        android:id="@+id/detail_location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/detail_location"
        app:layout_constraintTop_toBottomOf="@+id/detail_status" />

    <TextView
        android:id="@+id/detail_amount_episode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/amountEpisode"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_location" />

    <TextView
        android:id="@+id/detail_amount_episode_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/amountEpisode"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/detail_amount_episode"
        app:layout_constraintTop_toBottomOf="@+id/detail_location" />

</androidx.constraintlayout.widget.ConstraintLayout>